# logic-islands

./: .gitignore
godot/: LoginIslands.gdextension  config.ini  export_presets.cfg  icon.svg.import  project.godot
godot/scenes/: global.gd
godot/scenes/in_game/: game_map.gd  in_game_scenes.gd  in_game_scenes.tscn  simple_zoom_camera_2d.gd
godot/scenes/main/: main.gd  main.tscn
godot/scenes/settings/: settings.gd  settings.tscn
rust/: Cargo.toml  check.sh
rust/src/: build.rs  common.rs  in_game.rs  lib.rs  macros.rs
rust/src/common/: camera_2d.rs
rust/src/in_game/: bridge.rs  game_map.rs  island.rs
