[package]
name = "logic-islands"
version = "0.1.0-alpha.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rand = "0.8.5"

[build-dependencies]
cc = "1.0"

[profile.release]
lto = true
opt-level = 's'
# opt-level = 2

# [target.aarch64-linux-android]
# ar = "D:/Android/android-ndk-r26-beta1/toolchains/llvm/prebuilt/windows-x86_64/bin/llvm-ar"
# linker = "D:/Android/android-ndk-r26-beta1/toolchains/llvm/prebuilt/windows-x86_64/bin/aarch64-linux-android24-clang"
# rustflags = ["-C", "linker-flavor=ld.lld"]
